--- a/BBKS.tex
+++ b/BBKS.tex
@@ -6,7 +6,7 @@
 
 In previous versions of \osprey, the \ks algorithm~\cite{K*} modeled an ensemble of Boltzmann-weighted conformations to approximate the thermodynamic partition function. It combined minimized dead-end elimination pruning~\cite{DEE} with \as~\cite{DEE,A*} gap-free conformation enumeration to compute provable $\varepsilon$-approximations to the partition functions for the protein and ligand states of interest. \ks combined these partition function scores to approximate the association constant, \ka, as the ratio of $\varepsilon$-approximate partition functions between the bound and unbound states of a protein-ligand complex. Notably, each partition function ratio, called a \ks \emph{score}, is provably accurate with respect to the biophysical \emph{input model}~\cite{K*,minDEE,iMinDEE}. 
 
-Although \ks efficiently and provably approximates \ka for a given sequence, it must compute a \ks score for each sequence of interest. All provable ensemble-based algorithms prior to \bbks, as well as many heuristic algorithms which optimize binding affinity, are \emph{single-sequence} algorithms which must compute the binding affinity for each possible sequence. The number of sequences, of course, is exponential in the number of simultaneously mutable residue positions.  Therefore, designs with many mutable residues rapidly became intractable. \osprey 3.0 provides a new algorithm, \bbks, which overcomes this challenge. \bbks~\cite{BBK*} builds on \ks, and is the first provable, ensemble-based protein design algorithm to run in time sublinear in the number of sequences. The key innovation in \bbks that enables this improvement is the \emph{multi-sequence (\msbound) bound}. Rather than compute binding affinity separately for each possible sequence, as single-sequence methods do, \bbks efficiently computes a single provable \ks score upper bound for a combinatorial number of sequences. \bbks uses \msbound bounds to prune a combinatorial number of sequences during the search, entirely avoiding single-sequence computation for all pruned sequences.
+Although \ks efficiently and provably approximates \ka for a given sequence, it must compute a \ks score for each sequence of interest. All provable ensemble-based algorithms prior to \bbks, as well as many heuristic algorithms that optimize binding affinity, are \emph{single-sequence} algorithms which must compute the binding affinity for each possible sequence. The number of sequences, of course, is exponential in the number of simultaneously mutable residue positions.  Therefore, designs with many mutable residues rapidly became intractable. \osprey 3.0 provides a new algorithm, \bbks, which overcomes this challenge. \bbks~\cite{BBK*} builds on \ks, and is the first provable, ensemble-based protein design algorithm to run in time sublinear in the number of sequences. The key innovation in \bbks that enables this improvement is the \emph{multi-sequence (\msbound) bound}. Rather than compute binding affinity separately for each possible sequence, as single-sequence methods do, \bbks efficiently computes a single provable \ks score upper bound for a combinatorial number of sequences. \bbks uses \msbound bounds to prune a combinatorial number of sequences during the search, entirely avoiding single-sequence computation for all pruned sequences.
 
 Importantly, \bbks also contains many other powerful algorithmic improvements and implementation optimizations: the parallel architecture of \bbks, which enables concurrent energy minimization, and a novel two-pass partition function bound, which minimizes far fewer conformations while still computing a provable $\varepsilon$-approximation to the partition function. Combined with the combinatorial pruning power of the \msbound bound, \bbks is able to search over much larger sequence spaces than previously possible with single-sequence \ks (Fig.~\ref{fig:bbks}). In computational experiments on 204 protein design problems, \bbks accurately predicted the tightest-binding sequences while only computing \ks scores for as few as one in 10$^5$ of the sequences in the search space~\cite{BBK*}.  Moreover, in computational experiments on 51 protein-ligand design problems, \bbks was up to 1982-fold faster than single-sequence \ks, despite provably producing the same results~\cite{BBK*}.  
 
@@ -15,6 +15,6 @@ These improvements show that \bbks not only accelerates protein designs that wer
 \begin{figure}
 \center
 \includegraphics[width=6.5in]{figures/bbks.png}
-\caption{\textbf{Measuring the contributions of the \bbks~\cite{BBK*} algorithmic improvements to the empirically observed running times of \osprey.}  \bbks calculations were run to predict either the single top sequence or to enumerate the top 5, and were compared to exhaustive computation of \ks scores for each sequence (i.e., iMinDEE/\as/\ks or single-sequence \ks), which was the prior state of the art for Boltzmann-weighted ensemble-based binding affinity computation before \bbks.  (A) Running times for \bbks and single-sequence \ks vs. the number of sequences in the search space for 204 protein design test cases, a benchmark set described in Ref.~\citen{BBK*}.  Single-sequence \ks completed only 107 of the test cases within a 30-day time limit (left of the vertical line), and took up to 800 times longer than \bbks to do so, while \bbks completed all the designs within the time limit.  (B) The number $N$ of sequences whose energies must be examined or bounded by iMinDEE/\as/\ks (green line; exponential in the number of mutable residue positions) and by \bbks (dots). For each data point representing a \bbks test case, the vertical gap between that data point and the green line (gap on the Y axis) represents the number of sequences that are pruned without ever having to be examined.  Figure adapted with permission from Ref.~\citen{BBK*}.  }
+\caption{\textbf{Measuring the contributions of the \bbks~\cite{BBK*} algorithmic improvements to the empirically observed running times of \osprey.}  \bbks calculations were run to predict either the single top sequence or to enumerate the top 5, and were compared to exhaustive computation of \ks scores for each sequence (i.e., iMinDEE/\as/\ks~\cite{minDEE,iMinDEE} or single-sequence \ks), which was the prior state of the art for Boltzmann-weighted ensemble-based binding affinity computation before \bbks.  (A) Running times for \bbks and single-sequence \ks vs.~the number of sequences in the search space for 204 protein design test cases, a benchmark set described in Ref.~\citen{BBK*}.  Single-sequence \ks completed only 107 of the test cases within a 30-day time limit (left of the vertical line), and took up to 800 times longer than \bbks to do so, while \bbks completed all the designs within the time limit.  (B) The number $N$ of sequences whose energies must be examined or bounded by iMinDEE/\as/\ks (green line; exponential in the number of mutable residue positions) and by \bbks (dots). For each data point representing a \bbks test case, the vertical gap between that data point and the green line (gap on the $y$ axis) represents the number of sequences that are pruned without ever having to be examined.  Figure adapted with permission from Ref.~\citen{BBK*}.  }
 \label{fig:bbks}
 \end{figure}
