--- a/KSTests.tex
+++ b/KSTests.tex
@@ -12,7 +12,7 @@ For each system, the \ks scores were ranked in increasing order of reported expe
  \center
  \includegraphics[width=\textwidth]{figures/designExamples.png}
  \vspace{-0.5in}%to fit the figure on one page
- \caption{(A) The structure of the IFN$\alpha$2:IFNAR2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as sticks and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-E) Design at position R33 for a mutation that \osprey correctly predicts as decreasing binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe,PIV} displaying favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (33Q) with probe dots displaying some favorable as well as unfavorable interactions. Comparing (B) and (D), it is clear there is a loss in favorable interactions and a gain in unfavorable interactions upon mutation from R to Q, resulting in an experimentally observed decrease in binding that the \ks algorithm captures accurately (See Table \ref{table:spearman}). (C) and (E) show the top 10 conformations in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that \osprey correctly predicts as increasing binding: N156A. (F) The wildtype sequence with probe dots~\cite{Probe} displaying some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (156A) with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions (shown by an increase in the number of favorable probe dots) in (H) compared to (F), but these are not visually obvious, thus emphasizing the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
+ \caption{(A) The structure of the IFN$\alpha$2:IFNAR2 complex (PDB ID: 3S9D \cite{pdb3s9d}) with separate chains shown in cyan and magenta and with two example interface design regions shown in boxes. Each box contains a mutable residue shown as sticks and its surrounding flexible residues shown as lines. (B) and (F) zoom in on each design. (B-E) Design at position R33 for a mutation that \osprey correctly predicts as decreasing binding: R33Q. (B) The wildtype sequence with probe dots \cite{Probe,PIV} displaying favorable interactions with surrounding flexible residues (shown as lines). (D) The mutant sequence (33Q) with probe dots displaying some favorable as well as unfavorable interactions. Comparing (B) and (D), it is clear there is a loss in favorable interactions and a gain in unfavorable interactions upon mutation from R to Q, resulting in an experimentally observed decrease in binding that the \ks algorithm captures accurately (See Table \ref{table:spearman}). (C) and (E) show the top 10 conformations in the conformational ensemble used in the \ks calculation for each sequence. (F-I) Design at position N156 for a mutation that \osprey correctly predicts as increasing binding: N156A. (F) The wildtype sequence with probe dots~\cite{Probe,PIV} displaying some favorable interactions with surrounding flexible residues (shown as lines). (H) The mutant sequence (156A) with probe dots displaying some favorable interactions with surrounding flexible residues (shown as lines). There are some gained interactions (shown by an increase in the number of favorable probe dots) in (H) compared to (F), but these are not visually obvious, thus emphasizing the importance of \ks, which successfully picks up these nuanced changes and correctly predicts improved binding (See Table \ref{table:spearman}). (G) and (I) show the top 10 conformations in the conformational ensemble used in the \ks calculation for each sequence. Not shown are the ensembles for the unbound states that are also used to calculate the \ks scores.}
 \label{fig:designs}
 \end{figure}
 
