--- a/references.bib
+++ b/references.bib
@@ -2293,8 +2293,35 @@
   publisher={National Acad Sciences}
 }
 
+@article{DHFR_hospitals,
+  title={{MRSA} isolates from {United States} hospitals carry {dfrG} and {dfrK} resistance genes and succumb to propargyl-linked antifolates},
+  author={Reeve, Stephanie M and Scocchera, Eric W and Narendran, G and Keshipeddy, Santosh and Krucinska, Jolanta and Hajian, Behnoush and Ferreira, Jacob and Nailor, Michael and Aeschlimann, Jeffrey and Wright, Dennis L and Anderson, Amy C},
+  journal={Cell Chemical Biology},
+  volume={23},
+  number={12},
+  pages={1458-1467},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{sprig_analysis,
+  title={A critical analysis of computational protein design with sparse residue interaction graphs},
+  author={Jain, Swati and Jou, Jonathan D and Georgiev, Ivelin S and Donald, Bruce R},
+  journal={PLoS Computational Biology},
+  volume={13},
+  number={3},
+  pages={e1005346},
+  year={2017},
+  publisher={Public Library of Science}
+}
 
 
-
+@inproceedings{MPLP,
+  title={Fixing max-product: Convergent message passing algorithms for {MAP LP}-relaxations},
+  author={Globerson, Amir and Jaakkola, Tommi S},
+  booktitle={Advances in neural information processing systems},
+  pages={553-560},
+  year={2008}
+}
 
 
