Structure figure updates

--- a/python.tex
+++ b/python.tex
@@ -25,7 +25,7 @@ See Figure~\ref{fig:pythonGMEC} for a complete example of a Python script that p
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=3in]{figures/python_bbks_pic.png}
-\caption{\textbf{Setup for the Python-scripted \bbks~\cite{BBK*} design described in Fig.~\ref{fig:pythonBBKS}.}  This design starts with the crystal structure (PDB ID: 2RL0~\cite{2RL0}) of a complex between fragments of the protein FnBPA from~\textit{Staphylococcus aureus} (brown backbone) and human fibronectin (black backbone), and optimizes binding with respect to the amino acid type of FnBPA residue 649 (pink), while modeling continuous flexibility in several surrounding sidechains (orange).  }
+\includegraphics[width=3.25in]{figures/python_bbks_full.png}\includegraphics[width=3.25in]{figures/python_bbks_zoom.png}
+\caption{\textbf{Setup for the Python-scripted \bbks~\cite{BBK*} design described in Fig.~\ref{fig:pythonBBKS}.}  This design starts with the crystal structure (PDB ID: 2RL0~\cite{2RL0}) of a complex between fragments of the protein FnBPA from~\textit{Staphylococcus aureus} (blue ribbons) and human fibronectin (green ribbons), and optimizes binding with respect to the amino acid type of FnBPA residue 649 (magenta), while modeling continuous flexibility in several surrounding sidechains (orange).  The full complex is shown on the left, while the region surrounding the mutation is shown in detail on the right.  }
 \label{fig:pythonBBKSpic}
 \end{figure}
